Simplify some button css and change linkedin and github icons to not be buttons

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -37,8 +37,7 @@
   width: 50% !important;
 }
 
-.dashboard__data,
-.dashboard__button {
+.dashboard__data {
   font-size: 1.1rem;
   font-weight: 1000;
 }
