--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -13,8 +13,6 @@
 
 .dashboard__data {
   font-weight: 1000;
-}
-.dashboard__data {
   padding: 0 1rem;
   width: 100%;
   text-shadow: var(--text-shadow);
@@ -53,28 +51,6 @@
 }
 
 /* clients */
-
-/* single client */
-
-.generate-test-url__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50% !important;
-  margin: 0 1rem;
-}
-
-.gnerate-test-url__dropdown {
-  max-width: 11rem;
-}
-
-@media (max-width: 800px) {
-  .dashboard__single-client {
-    flex-direction: column !important;
-  }
-}
-
-/* clients other */
 .dashboard__client-controls {
   display: flex;
   width: 47rem;
@@ -86,7 +62,6 @@
 
 .dashboard__client-controls > input {
   margin-left: 0 !important;
-  /* text-justify:  */
 }
 
 .client-controls__button {
@@ -106,7 +81,18 @@
   justify-content: flex-start;
 }
 
-.client-header {
+.clients-table {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  justify-items: center;
+}
+
+.clients-table > p {
+  margin: 0.5rem 0 0 0;
+}
+
+.clients-header {
   background: var(--tertiary-color-light);
   width: 100%;
   text-align: center;
@@ -117,19 +103,8 @@
   cursor: pointer;
 }
 
-.client-header:hover {
+.clients-header:hover {
   text-shadow: var(--text-shadow);
-}
-
-.client-row {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  width: 100%;
-  justify-items: center;
-}
-
-.client-row > p {
-  margin: 0.5rem 0 0 0;
 }
 
 .client-name {
