Render basic graph

--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -20,3 +20,11 @@
 .comp-tests__list {
   padding-inline-start: 0;
 }
+
+.comp-tests__option {
+  cursor: pointer;
+}
+
+.chart-container {
+  flex-direction: column;
+}
