--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -23,9 +23,10 @@
 #modal-content {
   position: absolute;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: var(--tertiary-border);
+  border: var(--primary-color) solid 2px;
   border-radius: var(--pimrary-radius);
   padding: 1rem;
   box-sizing: border-box;
