Allow link to be clickable to open new tab

--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -9,9 +9,23 @@
   max-width: 24rem;
 }
 
-.new-url-modal__item {
+/* new url modal */
+
+.new-url-modal__text {
   margin: 0.5rem 0;
 }
+
+.new-url-modal__emph {
+  color: var(--primary-color);
+}
+
+.new-url-modal__link {
+  text-decoration: underline;
+  color: var(--primary-color-light);
+  cursor: pointer;
+}
+
+/* completed tests */
 
 .comp-tests {
   flex-direction: column;
