--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -13,6 +13,7 @@
 
 .new-url-modal__text {
   margin: 0.5rem 0;
+  text-align: center;
 }
 
 .new-url-modal__emph {
@@ -23,6 +24,13 @@
   text-decoration: underline;
   color: var(--primary-color-light);
   cursor: pointer;
+}
+
+.new-url-modal__sml {
+  color: var(--tertiary-color);
+  font-size: 0.85rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 
 /* completed tests */
