Add error when birth year is wrong, still need to fix styling

--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -62,3 +62,8 @@
     padding-right: 0.25rem !important;
   }
 }
+
+/* client test view */
+.birth-year-validator__container {
+  flex-direction: column;
+}
