--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -65,7 +65,7 @@
 
 .clients-container {
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .clients-table {
