--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -106,6 +106,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   border: var(--tertiary-border);
   border-radius: var(--pimrary-radius);
   background-color: var(--primary-color-xlight);
@@ -229,6 +230,11 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
 
 .tertiary-title {
   color: var(--tertiary-color);
+  text-align: center;
+}
+
+.cntr-txt-sml-margin {
+  margin: 0.5rem 0;
   text-align: center;
 }
 
