--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -217,7 +217,7 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
   border-color: var(--delete-color);
 }
 
-/* --------------- titles --------------- */
+/* --------------- titles and other text --------------- */
 .primary-title {
   color: var(--primary-color);
   text-align: center;
@@ -236,6 +236,10 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
 .cntr-txt-sml-margin {
   margin: 0.5rem 0;
   text-align: center;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 /* --------------- Forms --------------- */
@@ -302,6 +306,13 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
 }
 
 /* other */
+
+.clickable-link {
+  text-decoration: underline;
+  color: var(--primary-color-light);
+  cursor: pointer;
+  word-break: break-all;
+}
 
 .one1rem-ht {
   height: 1rem;
