Add shadow/bold to hover over client test options

--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -39,6 +39,11 @@
   cursor: pointer;
 }
 
+.comp-tests__option:hover {
+  text-shadow: var(--text-shadow);
+  font-weight: 1000;
+}
+
 .chart-container {
   flex-direction: column;
   overflow-x: scroll;
