--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -13,7 +13,8 @@
 
 @media (max-width: 800px) {
   .footer__text {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
+    text-align: center;
   }
 }
 
