Update colors on splash images

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -11,6 +11,11 @@
   height: 3rem;
 }
 
+.footer__text {
+  color: var(--tertiary-color);
+  margin-right: 0.5rem;
+}
+
 @media (max-width: 800px) {
   .footer__text {
     font-size: 0.75rem;
