--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -110,9 +110,10 @@
 }
 
 .selected-dp__question {
-  margin: 0.25rem 0 0.25rem 1rem;
+  margin: 0.25rem 0 0.5rem 0;
 }
 
-.selected-dp__question-stem {
-  color: var(--secondary-color);
+.selected-dp__res {
+  padding: .25rem 0;
+  color: var(--primary-color);
 }
