--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -17,9 +17,12 @@
   display: flex;
   align-items: center;
   font-size: 1.2rem;
-  font-weight: 1000;
   white-space: pre-wrap;
   cursor: pointer;
+}
+
+.s-h__t-emph {
+  font-weight: 1000;
 }
 
 @media (max-width: 385px) {
