--- a/react-app/src/components/ClientTests/ClientTests.css
+++ b/react-app/src/components/ClientTests/ClientTests.css
@@ -33,6 +33,7 @@
 
 .comp-tests__list {
   padding-inline-start: 0;
+  text-align: center;
 }
 
 .comp-tests__option {
@@ -114,6 +115,6 @@
 }
 
 .selected-dp__res {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
   color: var(--primary-color);
 }
