--- a/react-app/src/components/ModalConfirmButton/ModalConfirmButton.css
+++ b/react-app/src/components/ModalConfirmButton/ModalConfirmButton.css
@@ -4,6 +4,6 @@
 
 @media (max-width: 500px) {
   .confirm-buttons {
-    flex-direction: column !important;
+    flex-direction: column-reverse !important;
   }
 }
