--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,4 +1,6 @@
-/* TODO Add site wide styles */
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Cedarville+Cursive&family=Open+Sans:wght@300&display=swap');
+
+/* site wide styles */
 body {
   position: relative;
   margin: 0;
