--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -241,7 +241,7 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
 }
 
 .secondary-title {
-  color: var(--secondary-color);
+  color: var(--secondary-color-light);
   text-align: center;
 }
 
