Make test abbr highlight in orange when not yet seen

--- a/react-app/src/components/Client/Client.css
+++ b/react-app/src/components/Client/Client.css
@@ -33,8 +33,11 @@
 }
 
 .comp-tests__option:hover {
-  text-shadow: var(--text-shadow);
+  text-shadow: var(--text-shadow-prm-clr);
   font-weight: 1000;
+  color: var(--primary-color);
+  background-color: var(--tertiary-color-light);
+  border-radius: var(--primary-radius);
 }
 
 @media (max-width: 600px) {
