--- a/react-app/src/components/Client/Client.css
+++ b/react-app/src/components/Client/Client.css
@@ -25,8 +25,26 @@
 
 .comp-tests__list {
   padding-inline-start: 0;
-  margin: 0;
+  margin: auto;
   text-align: center;
+  width: 50%;
+}
+
+.two-or-more {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.five-or-more {
+  width: 60%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.seven-or-more {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .comp-tests__option {
